# magic

./: .gitignore  .readthedocs.yaml  Cargo.toml  MVP-BUGS.md  README.md  mkdocs.yml  requirements-docs.txt  shq-mvp-prompt.md
.github/workflows/: ci.yml  publish.yml
bird/: Cargo.toml
bird/src/: buffer.rs  config.rs  context.rs  error.rs  format_hints.rs  init.rs  lib.rs  perms.rs  privacy.rs  project.rs  schema.rs
bird/src/query/: mod.rs  parser.rs  tests.rs
bird/src/store/: atomic.rs  attempts.rs  compact.rs  events.rs  invocations.rs  mod.rs  outcomes.rs  outputs.rs  pending.rs  remote.rs  sessions.rs
docs/: CONTENT_ADDRESSED_BLOBS.md  IMPLEMENTATION_GUIDE.md  MIGRATION_SUMMARY.md  SPEC_CHANGELOG.md  START_HERE.md  bird-v5-proposal-draft.md  bird-v5-spec-proposal.md  bird_integration.md  bird_spec.md  bird_spec_excerpt.md  blq-followup-bird-v5.md  blq-followup-metadata.md  followup-to-blq-team.md  getting-started.md  index.md  shq_implementation.md  shq_shell_integration.md  sql-queries.md  storage-backends.md
docs/design/: clients.md  job-control-and-ignores.md  rich-prompt-indicator.md  storage-backends.md
docs/spec/v5/: bird-v5.md
docs/spec/v5/drafts/: proposal-bird-v5.md  response-bird-v5.md  response-to-blq-metadata.md
shq/: Cargo.toml
shq/src/: commands.rs  hooks.rs  main.rs  tutorial.rs
shq/tests/: integration.rs  privacy.rs
