[workspace]
resolver = "2"
members = ["bird", "shq"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/teaguesterling/magic"

[workspace.dependencies]
# Shared dependencies across workspace
duckdb = { version = "1.4", features = ["bundled"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
gethostname = "0.5"
rand = "0.8"
blake3 = "1.5"
base64 = "0.22"
flate2 = "1.0"
tempfile = "3.14"
glob-match = "0.2"
serde_json = "1.0"
