[package]
name = "bird"
description = "Buffer and Invocation Record Database - storage layer for shell command history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duckdb.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
gethostname.workspace = true
rand.workspace = true
blake3.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
