[package]
name = "shq"
description = "Shell Query - CLI for capturing and querying shell command history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "shq"
path = "src/main.rs"

[dependencies]
bird = { path = "../bird" }
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
